fixed alignment

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -48,43 +48,16 @@ div.text__container {
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
+  width: 100%;
 
-  &-top, &-bottom {
-    display: inline-block;
-    width: 100%;
-    margin: 5% 0;
+  &-item {
+    width: 50%;
   }
 
-  //a {
-  //  position: relative;
-  //
-  //  &::before {
-  //    content: '';
-  //    width: 80px;
-  //    height: 80px;
-  //    border-radius: 50%;
-  //    border: 3px solid $secondary-pink;
-  //    background-color: $white;
-  //    position: absolute;
-  //    top: -110px;
-  //    left: 98px;
-  //    z-index: -1;
-  //    filter: drop-shadow(1px 2px 2px #B0B0B0);
-  //  }
-
-    //&:hover::before {
-    //  background-color: $secondary-pink;
-    //  filter: none;
-    //}
-    //
-    //&:hover .icon {
-    //  fill: $white;
-    //}
-    //
-    //&:hover .icon-piano {
-    //  stroke: $white;
-    //}
-  //}
+  .icon--bg-white {
+    @include iconBg(90px, 90px, $secondary-pink, $white);
+    margin: 0;
+  }
 
   .icon {
     display: inline-block;
@@ -136,31 +109,33 @@ div.text__container {
   .about__icons__flex {
     justify-content: center;
     width: 100%;
+    margin-top: 5%;
 
     &-item {
-      width: 20%;
+      width: 5%;
+      margin: 0 5%;
     }
 
     .icon--bg-white {
-      @include iconBg(90px, 90px, $secondary-pink, $white)
+      @include iconBg(90px, 90px, $secondary-pink, $white);
+      margin: 0 auto;
 
       .icon {
         margin: 17% 20%;
       }
 
-      &:hover .icon{
+      &:hover {
+        background-color: $secondary-pink;
+        filter: none;
+      }
+
+      &:hover .icon {
         fill: $white;
       }
 
       &:hover .icon-piano {
         stroke: $white;
       }
-
-      &:hover {
-        background-color: $secondary-pink;
-      }
     }
-
-
   }
 }
